# loop-craft

./: .gitignore  AGENTS.md  README.md  pyproject.toml
dashboard/: index.html  status.json
docs/plans/: 2026-07-20-loop-craft-core-vertical-slice.md  2026-07-22-conversation-distiller-entry.md  2026-07-22-dashboard-problem-ledger.md  2026-07-22-entry-evidence-binding.md  2026-07-22-shared-entry-gate.md  2026-07-22-skill-packaging-adapter.md  2026-07-22-skill-upgrade-entry.md  2026-07-23-repository-delivery-docs.md
docs/project-management/: decision-log.md  progress-log.md  quality-gates.md  risk-register.md
docs/records/: 2026-07-20-resource-reuse-strategy.md  2026-07-22-core-vertical-slice-execution.md
docs/references/: resource-registry.yaml
docs/specs/: 2026-07-20-loop-craft-phase-2-design.md  2026-07-22-dashboard-problem-ledger.md
docs/testing/: 2026-07-23-forward-test-dataset-brief.md
loop-craft/: SKILL.md
loop-craft/agents/: openai.yaml
loop-craft/references/: candidate-review.md  core-build.md  from-conversation.md  from-scratch.md  loopability-gate.md  upgrade-skill.md
loop-craft/scripts/: build_loop.py
tests/: conftest.py
tests/fixtures/: accepted-definition.source-upgrade.json  accepted-definition.valid.json  accepted-definition.zero-loop.json  entry-evidence.valid.json
tests/integration/: test_build_pipeline.py  test_entry_evidence_pipeline.py  test_loop_craft_skill.py  test_skill_packaging_adapter.py
tests/unit/: test_canonical.py  test_codex_skill_adapter.py  test_compiler.py  test_drift.py  test_entry_evidence.py  test_validation.py  (+1 more)
(+20 files in other folders)
